--- a/theme.yaml
+++ b/theme.yaml
@@ -1,11 +1,11 @@
-id: chakhsu_pinghsu
-name: Pinghsu
+id: tudou_theme
+name: tudou
 author:
-  name: Chakhsu.Lau
-  website: https://www.linpx.com
+  name: tudou
+  website: https://blog.qitudou.com
 description:
 logo:
-website: https://github.com/halo-dev/halo-theme-pinghsu
-repo: https://github.com/halo-dev/halo-theme-pinghsu
+website: https://github.com/qiguoqiang/halo-theme-pinghsu.git
+repo: https://github.com/qiguoqiang/halo-theme-pinghsu.git
 version: 1.2.1
 require: 1.3.0
