--- a/theme.yaml
+++ b/theme.yaml
@@ -2,7 +2,7 @@ id: tudou_theme
 name: tudou
 author:
   name: tudou
-  website: https://blog.qitudou.com
+  website: https://blog.qgq.com
 description:
 logo:
 website: https://github.com/qiguoqiang/halo-theme-pinghsu.git
